Bug 395639 - Password field does not get focus with multi-screen, Plasma 5.13
Summary: Password field does not get focus with multi-screen, Plasma 5.13
Status: RESOLVED FIXED
Alias: None
Product: kscreenlocker
Classification: Unmaintained
Component: breeze-theme (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-20 08:45 UTC by Thomas Surrel
Modified: 2019-02-08 16:22 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Surrel 2018-06-20 08:45:07 UTC
In the case where a screen is attached to my laptop and the two screens are displaying the same content, the password field in the lock screen does get the focus so I need to click on it to be able to enter my password.
Comment 1 Thomas Surrel 2018-06-20 11:32:37 UTC
Just noticed: if I type my password with the text input not having the input, I can still log in. But visually, it looks like I am not typing anything. So it seems that the problem is not that the text input does not have focus but rather that the dipslay of the text input is not refreshed ...
Comment 2 Thomas Surrel 2018-10-12 07:36:29 UTC
The problem is still there in 5.14
Comment 3 Andrey 2018-12-20 09:37:39 UTC
Hello! You can try to use this (D17706) change, the non-working focus is fixed in it, maybe this will help solve your problem.
Comment 4 Thomas Surrel 2019-01-24 10:44:57 UTC
Hi, that indeed fixes this issue!
Comment 5 Nate Graham 2019-02-08 16:22:00 UTC
Git commit 2fdf002b11cf287bd7f244e884c9cd3da47aa693 by Nate Graham, on behalf of Andrey Bychkov.
Committed on 08/02/2019 at 16:21.
Pushed by ngraham into branch 'master'.

Fix lock screen focus

Summary:
When the screen is locked, the focus always remains on the main screen. This patch fixes the problem: now the focus is on the screen where the cursor is located.
FIXED-IN: 5.16.0

Reviewers: davidedmundson

Reviewed By: davidedmundson

Subscribers: ngraham, graesslin, abetts, davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D17706

M  +36   -32   greeter/greeterapp.cpp
M  +1    -0    greeter/greeterapp.h

https://commits.kde.org/kscreenlocker/2fdf002b11cf287bd7f244e884c9cd3da47aa693