Fix lock screen focus

Summary:
When the screen is locked, the focus always remains on the main screen. This patch fixes the problem: now the focus is on the screen where the cursor is located.

BUG: 395639
FIXED-IN: 5.16.0

Reviewers: davidedmundson

Reviewed By: davidedmundson

Subscribers: ngraham, graesslin, abetts, davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D17706